WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266442
Unable to log into gizmodo.com with tracking prevention enabled
https://bugs.webkit.org/show_bug.cgi?id=266442
Summary
Unable to log into gizmodo.com with tracking prevention enabled
Sihui Liu
Reported
2023-12-14 14:57:38 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2023-12-14 14:57:49 PST
rdar://106782128
Sihui Liu
Comment 2
2023-12-14 15:11:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21833
EWS
Comment 3
2023-12-15 15:11:49 PST
Committed
272146@main
(eb1f7a4e8a5e): <
https://commits.webkit.org/272146@main
> Reviewed commits have been landed. Closing PR #21833 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug