Unable to log into gizmodo.com with tracking prevention enabled https://bugs.webkit.org/show_bug.cgi?id=266442 rdar://106782128

Reviewed by John Wilander.

Update the quirk to make authentication flow of gizmodo.com work by:
1. Invoking requestStorageAccess on behalf of kinja.com when user starts authentication flow by clicking user profile
button (console log is added to make user and developer aware of the quirk).
2. Adjusting heuristics of detecting user profile button by finding target class on its ancestors, instead of only on
the element itself.
3. Skip checking user interaction on kinja.com in requestStorageAccess.

* Source/WebCore/page/Quirks.cpp:
(WebCore::elementHasClassInClosestAncestors):
(WebCore::isStorageAccessQuirkDomainAndElement):
(WebCore::Quirks::requestStorageAccessAndHandleClick const):
(WebCore::Quirks::triggerOptionalStorageAccessQuirk const):
* Source/WebCore/platform/network/NetworkStorageSession.cpp:
(WebCore::NetworkStorageSession::storageAccessQuirks):

Canonical link: https://commits.webkit.org/272146@main